# fix-umlauts

./: .pre-commit-config.yaml  LICENSE  README.md  convert.py  fix.py  pyproject.toml  tox.ini
fix_umlauts/: convert.py  fix.py
