[tool.poetry]
name = "fix-umlauts"
version = "0.1.0"
description = "fix missing umlauts that occurred do to encoding errors"
authors = ["jnnkB <29376715+jnnkB@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
